--- a/index.html
+++ b/index.html
@@ -6,14 +6,64 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <header id="header">
 <h1>HTML ANOTHER QUICK REVIEW</h1>
-    <h2>Capitulo #1</h2>
+<h2>Tabla de contenido</h2>
+<nav>
+    <ul>
+        <li><a href="#capitulo1">Capitulo #1</a></li>
+        <li><a href="#capitulo2">Capitulo #2</a></li>   
+        <li><a href="#capitulo3">Capitulo #3</a></li>
+    </ul>
+</nav>
+</header>
+<article>
+    <h2 id="capitulo1">Capitulo #1</h2>
         <h3>Es valido</h3>
             <h4>Puede llegar hasta h5 y h6</h4>
-            <p>Lorem ipsum dolor sit, amet <blockquote cite=""></blockquote>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, labore earum consequuntur temporibus sunt explicabo vero veniam? Non dolore aspernatur, a deleniti amet architecto nesciunt culpa rem dicta aliquid soluta?</blockquote>consectetur adipisicing elit. Tempora ratione beatae ex, nesciunt cum ipsa aspernatur nihil, hic doloribus vero, cumque deleniti exercitationem! Neque, earum! Non maxime minus culpa dolor.</p>
+            <p>Lorem ipsum dolor sit, amet <blockquote cite=""></blockquote>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, labore earum consequuntur temporibus sunt explicabo vero veniam? Non dolore aspernatur, a deleniti amet architecto nesciunt culpa rem dicta aliquid soluta?</blockquote> consectetur adipisicing elit. Tempora ratione beatae ex, nesciunt cum ipsa aspernatur nihil, hic doloribus vero, cumque deleniti exercitationem! Neque, earum! Non maxime minus culpa dolor.</p>
             <br>
-    <h2>Capitulo #2</h2>
-    <h2>Capitulo #3</h2>
+        </article>
+        <div>
+
+        </div>
+        <span>
+
+        </span>
+        <section>
+
+        </section>
+        <table border="2" style="width:100vw">
+            <thead>
+                <tr>
+                    <th>Titulo</th>
+                    <th>Titulo</th>
+                    <th>Titulo</th>
+                    <th>Titulo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                </tr>
+                </tbody>
+                <tfoot>
+                    <tr><td colspan="4">pie de tabla</td></tr>
+                </tfoot>
+        </table>
+        <aside>
+            texto alterno 1 <br>
+            texto alterno 2 <br>
+            texto alterno 3 <br>
+            texto alterno 4 <br>
+        </aside>
+        
+    <h2 id="capitulo2">Capitulo #2</h2>
+    <h2 id="capitulo3">Capitulo #3</h2>
+    <footer></footer>
     </body>
 </html>
 
