--- a/detalleproducto.html
+++ b/detalleproducto.html
@@ -339,9 +339,15 @@
       <p>País Imaginario</p>
       <h4>Síguenos en las redes sociales</h4>
       <ul>
-        <li><a href="https://www.facebook.com/BLACKPINKOFFICIAL/">Facebook</a></li>
-        <li><a href="https://twitter.com/blackpink_lisa?lang=en">Twitter</a></li>
-        <li><a href="https://www.instagram.com/lalalalisa_m/?hl=en">Instagram</a></li>
+        <li>
+          <a href="https://www.facebook.com/BLACKPINKOFFICIAL/">Facebook</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/blackpink_lisa?lang=en">Twitter</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/lalalalisa_m/?hl=en">Instagram</a>
+        </li>
       </ul>
     </section>
     <footer>
